--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -13,11 +13,13 @@
     <% if rodauth.authenticated? %>
       <div class="dropdown">
         <button class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" type="button">
-          Account
+          Account (<%= rodauth.authenticated_by.join(", ") %>)
         </button>
         <div class="dropdown-menu dropdown-menu-end">
           <%= link_to "Change password", rodauth.change_password_path, class: "dropdown-item" %>
           <%= link_to "Change email", rodauth.change_login_path, class: "dropdown-item" %>
+          <div class="dropdown-divider"></div>
+          <%= link_to "Manage MFA", rodauth.two_factor_manage_path, class: "dropdown-item" %>
           <div class="dropdown-divider"></div>
           <%= link_to "Close account", rodauth.close_account_path, class: "dropdown-item text-danger" %>
           <%= link_to "Sign out", rodauth.logout_path, data: { turbo_method: :post }, class: "dropdown-item" %>
